--- a/less/style-2.less
+++ b/less/style-2.less
@@ -3,7 +3,32 @@
 @base_color: #888;
 @text_color: #000;
 
-#iface-wrapper {
+.rounded-corners (@radius: 5px) {
+  -webkit-border-radius: @radius;
+  -moz-border-radius: @radius;
+  -ms-border-radius: @radius;
+  -o-border-radius: @radius;
+  border-radius: @radius;
+}
+
+a {
+	color: @text_color;
+	&:hover {
+		color: lighten(@text_color, 30%);
+	}
+}
+
+.goBack {
+	display: inline-block;
+	background-color: darken(@base_color, 30%);
+	width: 50px;
+	.rounded-corners(10px);
+	border: 2px solid darken(@text_color, 30%);
+	cursor: hand !important;
+	text-align: center;
+}
+
+#iface-frame {
 	width: @iwidth;
 	height: @iheight;
 	padding: 0px;
@@ -11,45 +36,57 @@
 	overflow-y: scroll;
 	overflow-x: hidden;
 	
-	
-	ul.selectColumn {
-		margin: 0px;
-		padding: 0px;
+	#iface-tray {
+		position: relative;
+		width: 10000px;
+		height: 600px;
 		
-		li {
-			background: @base_color;
-			padding: 15px;
-			list-style: none;
-			font-size: 28px;
-			width: @iwidth - 30px;
-			height: 100px - 30px;
-			border: 1px solid #000;
-			color: @text_color;
-			-webkit-transition: color 0.3s;
-			-webkit-transition: background-color 0.3s;
+		ul.selectColumn {
+			margin: 0px;
+			padding: 0px;
+			float: left;
 			
-			&:hover {
-				cursor: pointer;
-				cursor: hand;
-				background-color: lighten(@base_color, 30%);
-				color: lighten(@text_color, 30%);
-			}
-			
-			&.heading {
-				font-size: 36px;
-				font-weight: bold;
+			li {
+				background: @base_color;
+				padding: 15px;
+				list-style: none;
+				font-size: 28px;
+				width: @iwidth - 32px;
+				height: 100px - 30px;
+				border: 1px solid #000;
+				color: @text_color;
+				-webkit-transition: color 0.3s;
+				-webkit-transition: background-color 0.3s;
+				
 				&:hover {
-					cursor: default;
-					background-color: @base_color;
-					color: @text_color;
+					cursor: pointer;
+					cursor: hand;
+					background-color: lighten(@base_color, 30%);
+					color: lighten(@text_color, 30%);
+					div {
+						padding-left: 25px;
+					}
 				}
+				
+				&.heading {
+					font-size: 36px;
+					font-weight: bold;
+					&:hover {
+						cursor: default;
+						background-color: @base_color;
+						color: @text_color;
+						padding-left: 15px;
+					}
+				}
+				
+				div {
+					height: 100px;
+					margin-top: 20px;
+					padding-left: 0px;
+					-webkit-transition: padding 0.3s;
+				}
+				
 			}
-			
-			div {
-				height: 100px;
-				margin-top: 20px;
-			}
-			
 		}
 	}
 }
