--- a/css/style-2.css
+++ b/css/style-2.css
@@ -1,8 +1,14 @@
+body {
+  background: #888888;
+  color: #000000;
+  overflow: hidden;
+}
 a {
   color: #000000;
 }
 a:hover {
   color: #4d4d4d;
+  cursor: hand !important;
 }
 .goBack {
   display: inline-block;
@@ -18,8 +24,8 @@ a:hover {
   text-align: center;
 }
 #iface-frame {
-  width: 640px;
-  height: 480px;
+  width: 100%;
+  height: 100%;
   padding: 0px;
   margin: 0px;
   overflow-y: scroll;
@@ -28,47 +34,64 @@ a:hover {
 #iface-frame #iface-tray {
   position: relative;
   width: 10000px;
-  height: 600px;
+  height: 100%;
 }
-#iface-frame #iface-tray ul.selectColumn {
+#iface-frame #iface-tray .selectColumn {
   margin: 0px;
   padding: 0px;
   float: left;
+  width: 100%;
 }
-#iface-frame #iface-tray ul.selectColumn li {
-  background: #888888;
+#iface-frame #iface-tray .selectColumn li {
   padding: 15px;
   list-style: none;
   font-size: 28px;
-  width: 608px;
+  width: 100%;
   height: 70px;
   border: 1px solid #000;
-  color: #000000;
   -webkit-transition: color 0.3s;
   -webkit-transition: background-color 0.3s;
 }
-#iface-frame #iface-tray ul.selectColumn li:hover {
+#iface-frame #iface-tray .selectColumn li a {
+  text-decoration: none;
+}
+#iface-frame #iface-tray .selectColumn li:hover {
   cursor: pointer;
   cursor: hand;
   background-color: #d4d4d4;
   color: #4d4d4d;
 }
-#iface-frame #iface-tray ul.selectColumn li:hover div {
+#iface-frame #iface-tray .selectColumn li:hover div {
   padding-left: 25px;
 }
-#iface-frame #iface-tray ul.selectColumn li.heading {
+#iface-frame #iface-tray .selectColumn li.heading {
   font-size: 36px;
   font-weight: bold;
 }
-#iface-frame #iface-tray ul.selectColumn li.heading:hover {
+#iface-frame #iface-tray .selectColumn li.heading:hover {
   cursor: default;
   background-color: #888888;
   color: #000000;
   padding-left: 15px;
 }
-#iface-frame #iface-tray ul.selectColumn li div {
+#iface-frame #iface-tray .selectColumn li div {
   height: 100px;
   margin-top: 20px;
   padding-left: 0px;
   -webkit-transition: padding 0.3s;
+}
+#iface-frame #iface-tray .selectColumn ul.facts li {
+  list-style: circle;
+  border: none;
+  font-size: 16px;
+  height: auto;
+}
+#iface-frame #iface-tray .selectColumn ul.facts li:hover {
+  margin: auto;
+  background-color: inherit;
+}
+#iface-frame #iface-tray .selectColumn .hiddenThumbs img.thumb {
+  margin: 2px;
+  padding: 5px;
+  border: 1px solid #ff8;
 }
