--- a/less/style-2.less
+++ b/less/style-2.less
@@ -3,6 +3,13 @@
 @base_color: #888;
 @text_color: #000;
 
+
+body {
+	background: @base_color;
+	color: @text_color;
+	overflow: hidden;
+}
+
 .rounded-corners (@radius: 5px) {
   -webkit-border-radius: @radius;
   -moz-border-radius: @radius;
@@ -15,6 +22,7 @@ a {
 	color: @text_color;
 	&:hover {
 		color: lighten(@text_color, 30%);
+		cursor: hand !important;
 	}
 }
 
@@ -29,8 +37,8 @@ a {
 }
 
 #iface-frame {
-	width: @iwidth;
-	height: @iheight;
+	width: 100%;
+	height: 100%;
 	padding: 0px;
 	margin: 0px;
 	overflow-y: scroll;
@@ -39,22 +47,26 @@ a {
 	#iface-tray {
 		position: relative;
 		width: 10000px;
-		height: 600px;
+		height: 100%;
 		
-		ul.selectColumn {
+		.selectColumn {
 			margin: 0px;
 			padding: 0px;
 			float: left;
+			width: 100%;
 			
 			li {
-				background: @base_color;
+				a {
+					text-decoration: none;
+				}
+				
 				padding: 15px;
 				list-style: none;
 				font-size: 28px;
-				width: @iwidth - 32px;
-				height: 100px - 30px;
+				width: 100%;
+				height: 70px;
 				border: 1px solid #000;
-				color: @text_color;
+				
 				-webkit-transition: color 0.3s;
 				-webkit-transition: background-color 0.3s;
 				
@@ -87,6 +99,27 @@ a {
 				}
 				
 			}
+			
+			ul.facts li {
+				list-style: circle;
+				border: none;
+				font-size: 16px;
+				height: auto;
+				&:hover {
+					margin: auto;
+					background-color: inherit;
+				}
+			}
+			
+			.hiddenThumbs {
+				img.thumb {
+					margin: 2px;
+					padding: 5px;
+					border: 1px solid #ff8;
+				}
+				//display: none;
+			}
+			
 		}
 	}
 }
