--- a/less/style-2.less
+++ b/less/style-2.less
@@ -105,6 +105,7 @@ a {
 				border: none;
 				font-size: 16px;
 				height: auto;
+				padding: 2px;
 				&:hover {
 					margin: auto;
 					background-color: inherit;
