--- a/css/style-2.css
+++ b/css/style-2.css
@@ -5,6 +5,7 @@ body {
 }
 a {
   color: #000000;
+  display: block;
 }
 a:hover {
   color: #4d4d4d;
@@ -45,28 +46,6 @@ a:visited {
   float: left;
   width: 100%;
 }
-#iface-frame #iface-tray .selectColumn li {
-  padding: 15px;
-  list-style: none;
-  font-size: 28px;
-  width: 100%;
-  height: 70px;
-  border: 1px solid #000;
-  -webkit-transition: color 0.3s;
-  -webkit-transition: background-color 0.3s;
-}
-#iface-frame #iface-tray .selectColumn li a {
-  text-decoration: none;
-}
-#iface-frame #iface-tray .selectColumn li:hover {
-  cursor: pointer;
-  cursor: hand;
-  background-color: #d4d4d4;
-  color: #4d4d4d;
-}
-#iface-frame #iface-tray .selectColumn li:hover div {
-  padding-left: 25px;
-}
 #iface-frame #iface-tray .selectColumn li.heading {
   font-size: 36px;
   font-weight: bold;
@@ -75,12 +54,36 @@ a:visited {
   cursor: default;
   background-color: #888888;
   color: #000000;
-  padding-left: 15px;
+  padding-left: 10px;
 }
-#iface-frame #iface-tray .selectColumn li div {
-  height: 100px;
-  margin-top: 20px;
-  padding-left: 0px;
+#iface-frame #iface-tray .selectColumn li.menuItem {
+  overflow: hidden;
+  white-space: nowrap;
+  list-style: none;
+  font-size: 28px;
+  width: 100%;
+  height: 70px;
+  border: 1px solid #000;
+  -webkit-transition: color 0.3s;
+  -webkit-transition: background-color 0.3s;
+}
+#iface-frame #iface-tray .selectColumn li.menuItem a {
+  text-decoration: none;
+  margin-top: 0;
+}
+#iface-frame #iface-tray .selectColumn li.menuItem:hover {
+  cursor: pointer;
+  cursor: hand;
+  background-color: #d4d4d4;
+  color: #4d4d4d;
+}
+#iface-frame #iface-tray .selectColumn li.menuItem:hover div {
+  padding-left: 35px;
+}
+#iface-frame #iface-tray .selectColumn li.menuItem div {
+  height: 50px;
+  padding-top: 20px;
+  padding-left: 10px;
   -webkit-transition: padding 0.3s;
 }
 #iface-frame #iface-tray .selectColumn ul.facts li {
