--- a/less/style-2.less
+++ b/less/style-2.less
@@ -3,6 +3,8 @@
 @base_color: #888;
 @text_color: #000;
 
+@entry_height: 70px;
+
 
 body {
 	background: @base_color;
@@ -20,6 +22,7 @@ body {
 
 a {
 	color: @text_color;
+	display: block;
 	&:hover {
 		color: lighten(@text_color, 30%);
 		cursor: hand !important;
@@ -59,30 +62,6 @@ a {
 			width: 100%;
 			
 			li {
-				a {
-					text-decoration: none;
-				}
-				
-				padding: 15px;
-				list-style: none;
-				font-size: 28px;
-				width: 100%;
-				height: 70px;
-				border: 1px solid #000;
-				
-				-webkit-transition: color 0.3s;
-				-webkit-transition: background-color 0.3s;
-				
-				&:hover {
-					cursor: pointer;
-					cursor: hand;
-					background-color: lighten(@base_color, 30%);
-					color: lighten(@text_color, 30%);
-					div {
-						padding-left: 25px;
-					}
-				}
-				
 				&.heading {
 					font-size: 36px;
 					font-weight: bold;
@@ -90,17 +69,48 @@ a {
 						cursor: default;
 						background-color: @base_color;
 						color: @text_color;
-						padding-left: 15px;
+						padding-left: 10px;
 					}
 				}
 				
-				div {
-					height: 100px;
-					margin-top: 20px;
-					padding-left: 0px;
-					-webkit-transition: padding 0.3s;
+				&.menuItem {
+					overflow: hidden;
+					white-space: nowrap;
+					a {
+						text-decoration: none;
+						margin-top: 0;
+					}
+					
+					//padding: 15px;
+					list-style: none;
+					font-size: 28px;
+					width: 100%;
+					height: @entry_height;
+					border: 1px solid #000;
+					
+					-webkit-transition: color 0.3s;
+					-webkit-transition: background-color 0.3s;
+					
+					&:hover {
+						cursor: pointer;
+						cursor: hand;
+						background-color: lighten(@base_color, 30%);
+						color: lighten(@text_color, 30%);
+						div {
+							padding-left: 35px;
+						}
+					}
+					
+					
+					
+					div {
+						height: @entry_height - 20px;
+						padding-top: 20px;
+						padding-left: 10px;
+						-webkit-transition: padding 0.3s;
+					}
+					
 				}
-				
 			}
 			
 			ul.facts li {
