--- a/less/style-2.less
+++ b/less/style-2.less
@@ -21,25 +21,26 @@ body {
 }
 
 a {
-	color: @text_color;
+	color: @text_color, 30%;
 	display: block;
 	&:hover {
-		color: lighten(@text_color, 30%);
+		color: lighten(@text_color, 60%);
 		cursor: hand !important;
 	}
 	&:visited {
-		color: @text_color;
+		color: lighten(@text_color, 30%);
 	}
 }
 
-.goBack {
+a.goBack {
 	display: inline-block;
-	background-color: darken(@base_color, 30%);
-	width: 50px;
-	.rounded-corners(10px);
-	border: 2px solid darken(@text_color, 30%);
+	text-indent: -10000px;
+	background-image: url(../img/back-button.png);
+	width: 31px;
+	height: 31px;
 	cursor: hand !important;
 	text-align: center;
+	text-decoration: none;
 }
 
 #iface-frame {
@@ -61,7 +62,14 @@ a {
 			float: left;
 			width: 100%;
 			
+			div {
+				&.synopsis {
+					width: 640px;
+				}
+			}
+			
 			li {
+				padding-left: 10px;
 				&.heading {
 					font-size: 36px;
 					font-weight: bold;
@@ -69,7 +77,7 @@ a {
 						cursor: default;
 						background-color: @base_color;
 						color: @text_color;
-						padding-left: 10px;
+						//padding-left: 10px;
 					}
 				}
 				
@@ -77,9 +85,10 @@ a {
 					overflow: hidden;
 					white-space: nowrap;
 					a {
+						color: @text_color;
 						text-decoration: none;
 						margin-top: 0;
-					}
+					} // a
 					
 					//padding: 15px;
 					list-style: none;
@@ -90,28 +99,27 @@ a {
 					
 					-webkit-transition: color 0.3s;
 					-webkit-transition: background-color 0.3s;
+					-webkit-transition: padding 0.3s;
 					
 					&:hover {
 						cursor: pointer;
 						cursor: hand;
 						background-color: lighten(@base_color, 30%);
 						color: lighten(@text_color, 30%);
+						padding-left: 25px;
 						div {
-							padding-left: 35px;
+							//padding-left: 35px;
 						}
-					}
-					
-					
+					} // :hover
 					
 					div {
 						height: @entry_height - 20px;
 						padding-top: 20px;
-						padding-left: 10px;
-						-webkit-transition: padding 0.3s;
-					}
-					
-				}
-			}
+						//padding-left: 10px;
+						
+					} // div
+				} // .menuItem
+			} // li
 			
 			ul.facts li {
 				list-style: circle;
@@ -125,11 +133,10 @@ a {
 				}
 			}
 			
-			.hiddenThumbs {
+			.thumbs {
 				img.thumb {
-					margin: 2px;
-					padding: 5px;
-					border: 1px solid #ff8;
+					margin: 5px;
+					border: 2px solid darken(@text_color, 30%);
 				}
 				//display: none;
 			}
