--- a/css/style-2.css
+++ b/css/style-2.css
@@ -4,7 +4,7 @@ body {
   overflow: hidden;
 }
 a {
-  color: #000000, 30%;
+  color: #000000;
   display: block;
 }
 a:hover {
@@ -13,16 +13,6 @@ a:hover {
 }
 a:visited {
   color: #4d4d4d;
-}
-a.goBack {
-  display: inline-block;
-  text-indent: -10000px;
-  background-image: url(../img/back-button.png);
-  width: 31px;
-  height: 31px;
-  cursor: hand !important;
-  text-align: center;
-  text-decoration: none;
 }
 #iface-frame {
   width: 100%;
@@ -51,21 +41,35 @@ a.goBack {
 }
 #iface-frame #iface-tray .selectColumn li {
   padding-left: 10px;
+  list-style: none;
 }
 #iface-frame #iface-tray .selectColumn li.heading {
   font-size: 36px;
   font-weight: bold;
   text-shadow: #555555 3px 3px 5px;
 }
+#iface-frame #iface-tray .selectColumn li.heading .fileLink {
+  float: left;
+}
 #iface-frame #iface-tray .selectColumn li.heading:hover {
   cursor: default;
   background-color: #888888;
   color: #000000;
 }
+#iface-frame #iface-tray .selectColumn li.heading a.goBack {
+  float: left;
+  background-image: url(../img/back-button.png);
+  background-repeat: no-repeat;
+  cursor: hand !important;
+  display: block;
+  text-decoration: none;
+  text-indent: 40px;
+  min-width: 36px;
+  height: 40px;
+}
 #iface-frame #iface-tray .selectColumn li.menuItem {
   overflow: hidden;
   white-space: nowrap;
-  list-style: none;
   font-size: 28px;
   width: 100%;
   height: 70px;
