--- a/css/style-2.css
+++ b/css/style-2.css
@@ -51,10 +51,8 @@ a:visited {
 #iface-frame #iface-tray .selectColumn li.heading .fileLink {
   float: left;
 }
-#iface-frame #iface-tray .selectColumn li.heading:hover {
-  cursor: default;
-  background-color: #888888;
-  color: #000000;
+#iface-frame #iface-tray .selectColumn li.heading a {
+  text-decoration: none;
 }
 #iface-frame #iface-tray .selectColumn li.heading a.goBack {
   float: left;
@@ -68,12 +66,12 @@ a:visited {
   height: 40px;
 }
 #iface-frame #iface-tray .selectColumn li.menuItem {
-  overflow: hidden;
-  white-space: nowrap;
   font-size: 28px;
   width: 100%;
   height: 70px;
   border: 1px solid #000;
+  overflow: hidden;
+  white-space: nowrap;
   -webkit-transition: color 0.3s;
   -webkit-transition: background-color 0.3s;
   -webkit-transition: padding 0.3s;
