--- a/less/style-2.less
+++ b/less/style-2.less
@@ -75,28 +75,40 @@ a {
 						float: left;
 					}
 					
-					&:hover {
-						cursor: default;
-						background-color: @base_color;
-						color: @text_color;
-					}
-					a.goBack {
-						float: left;
-						
-						background-image: url(../img/back-button.png);
-						background-repeat: no-repeat;
-						cursor: hand !important;
-						display: block;
+					//&:hover {
+					//	cursor: default;
+					//	background-color: @base_color;
+					//	color: @text_color;
+					//}
+					a {
 						text-decoration: none;
-						text-indent: 40px;
-						min-width: 36px;
-						height: 40px;
+						&.goBack {
+							float: left;
+							
+							background-image: url(../img/back-button.png);
+							background-repeat: no-repeat;
+							cursor: hand !important;
+							display: block;
+							text-decoration: none;
+							text-indent: 40px;
+							min-width: 36px;
+							height: 40px;
+						}
 					}
 				}
 				
 				&.menuItem {
+					font-size: 28px;
+					width: 100%;
+					height: @entry_height;
+					border: 1px solid #000;
+					
 					overflow: hidden;
 					white-space: nowrap;
+					-webkit-transition: color 0.3s;
+					-webkit-transition: background-color 0.3s;
+					-webkit-transition: padding 0.3s;
+					
 					a {
 						color: @text_color;
 						text-shadow: darken(@base_color, 20%) 2px 2px 3px;
@@ -105,14 +117,9 @@ a {
 					} // a
 					
 					
-					font-size: 28px;
-					width: 100%;
-					height: @entry_height;
-					border: 1px solid #000;
 					
-					-webkit-transition: color 0.3s;
-					-webkit-transition: background-color 0.3s;
-					-webkit-transition: padding 0.3s;
+					
+					
 					
 					&:hover {
 						cursor: pointer;
