--- a/css/style-2.css
+++ b/css/style-2.css
@@ -7,13 +7,6 @@ a {
   color: #000000;
   display: block;
 }
-a:hover {
-  color: #999999;
-  cursor: hand !important;
-}
-a:visited {
-  color: #4d4d4d;
-}
 #iface-frame {
   width: 100%;
   height: 100%;
@@ -33,6 +26,40 @@ a:visited {
   float: left;
   width: 100%;
 }
+#iface-frame #iface-tray .selectColumn a {
+  text-decoration: none;
+  cursor: hand !important;
+}
+#iface-frame #iface-tray .selectColumn a.deleteButton {
+  float: left;
+  background-image: url(../img/delete-button.png);
+  background-repeat: no-repeat;
+  text-indent: -10000;
+  width: 30px;
+  height: 30px;
+  background-size: 30px 30px;
+}
+#iface-frame #iface-tray .selectColumn a.goBack {
+  float: left;
+  background-image: url(../img/back-button.png);
+  background-repeat: no-repeat;
+  cursor: hand !important;
+  display: block;
+  text-indent: 40px;
+  min-width: 36px;
+  height: 40px;
+}
+#iface-frame #iface-tray .selectColumn a.fileLink {
+  float: left;
+  font-size: 30px;
+  font-weight: bold;
+  color: #555555;
+  text-decoration: none;
+}
+#iface-frame #iface-tray .selectColumn a.fileLink .dlArrow {
+  width: 30px;
+  height: 30px;
+}
 #iface-frame #iface-tray .selectColumn div.details {
   margin-left: 10px;
 }
@@ -47,23 +74,6 @@ a:visited {
   font-size: 36px;
   font-weight: bold;
   text-shadow: #555555 3px 3px 5px;
-}
-#iface-frame #iface-tray .selectColumn li.heading .fileLink {
-  float: left;
-}
-#iface-frame #iface-tray .selectColumn li.heading a {
-  text-decoration: none;
-}
-#iface-frame #iface-tray .selectColumn li.heading a.goBack {
-  float: left;
-  background-image: url(../img/back-button.png);
-  background-repeat: no-repeat;
-  cursor: hand !important;
-  display: block;
-  text-decoration: none;
-  text-indent: 40px;
-  min-width: 36px;
-  height: 40px;
 }
 #iface-frame #iface-tray .selectColumn li.menuItem {
   font-size: 28px;
