--- a/less/style-2.less
+++ b/less/style-2.less
@@ -10,6 +10,9 @@ body {
 	background: @base_color;
 	color: @text_color;
 	overflow: hidden;
+	//-webkit-transition: color 0.3s;
+	//-webkit-transition: background-color 0.3s;
+	//-webkit-transition: padding 0.3s;
 }
 
 .rounded-corners (@radius: 5px) {
@@ -121,20 +124,10 @@ a {
 					
 					overflow: hidden;
 					white-space: nowrap;
+					
 					-webkit-transition: color 0.3s;
 					-webkit-transition: background-color 0.3s;
 					-webkit-transition: padding 0.3s;
-					
-					a {
-						color: @text_color;
-						text-shadow: darken(@base_color, 20%) 2px 2px 3px;
-						text-decoration: none;
-						margin-top: 0;
-					} // a
-					
-					
-					
-					
 					
 					
 					&:hover {
@@ -144,6 +137,14 @@ a {
 						color: lighten(@text_color, 30%);
 						padding-left: 25px;
 					} // :hover
+					
+					
+					a {
+						color: @text_color;
+						text-shadow: darken(@base_color, 20%) 2px 2px 3px;
+						text-decoration: none;
+						margin-top: 0;
+					} // a
 					
 					div {
 						height: @entry_height - 20px;
