--- a/css/style-2.css
+++ b/css/style-2.css
@@ -3,6 +3,49 @@ body {
   color: #000000;
   overflow: hidden;
 }
+.modalWindow {
+  position: absolute;
+  z-index: 10000;
+  left: 20px;
+  top: 20px;
+  background-color: #888888;
+  color: #000000;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  border-radius: 10px;
+  padding: 10px;
+  border: 4px solid #3c3c3c;
+  display: none;
+}
+.modalWindow a.dismiss {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 20px;
+}
+.modalWindow .debug {
+  position: absolute;
+  bottom: 10px;
+  font-family: Consolas, Courier New, Courier, monospace;
+  font-size: 16px;
+  white-space: pre;
+  background: #fff;
+  color: #000;
+  border: 2px solid #000;
+  padding: 3px;
+  overflow: scroll;
+  width: 90%;
+  height: auto;
+  min-height: 100px;
+}
+.modalWindow .source {
+  white-space: pre;
+  font-weight: bold;
+}
 a {
   color: #000000;
   display: block;
