--- a/less/style-2.less
+++ b/less/style-2.less
@@ -5,6 +5,13 @@
 
 @entry_height: 70px;
 
+.rounded-corners (@radius: 5px) {
+  -webkit-border-radius: @radius;
+  -moz-border-radius: @radius;
+  -ms-border-radius: @radius;
+  -o-border-radius: @radius;
+  border-radius: @radius;
+}
 
 body {
 	background: @base_color;
@@ -15,13 +22,51 @@ body {
 	//-webkit-transition: padding 0.3s;
 }
 
-.rounded-corners (@radius: 5px) {
-  -webkit-border-radius: @radius;
-  -moz-border-radius: @radius;
-  -ms-border-radius: @radius;
-  -o-border-radius: @radius;
-  border-radius: @radius;
+.modalWindow {
+	position: absolute;
+	z-index: 10000;
+	left: 20px;
+	top: 20px;
+	background-color: @base_color;
+	color: @text_color;
+	.rounded-corners(10px);
+	padding: 10px;
+	border: 4px solid darken(@base_color, 30%);
+	display: none;
+	
+	a.dismiss {
+		position: absolute;
+		right: 10px;
+		top: 10px;
+		text-decoration: none;
+		font-weight: bold;
+		font-size: 20px;
+	}
+	
+	.debug {
+		position: absolute;
+		bottom: 10px;
+		font-family: Consolas, Courier New, Courier, monospace;
+		font-size: 16px;
+		white-space: pre;
+		background: #fff;
+		color: #000;
+		border: 2px solid #000;
+		padding: 3px;
+		overflow: scroll;
+		width: 90%;
+		height: auto;
+		min-height: 100px;
+	}
+	
+	.source {
+		white-space: pre;
+		font-weight: bold;
+	}
+	
 }
+
+
 
 a {
 	color: darken(@text_color, 30%);
